--- a/Content/main.css
+++ b/Content/main.css
@@ -1,4 +1,20 @@
 #game
 {
-    border: 1px solid black;
+  border: 1px solid black;
+  position: absolute;
+  min-width: 320px;
+  max-width: 100%;
+  min-height: 240px;
+  max-height: 100%;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+    border: 1px Black solid;
+  border-radius: 6px;
+  display: block;
+}
+html, body {
+  background: rgb(53, 53, 53);
 }
