--- a/Content/main.css
+++ b/Content/main.css
@@ -14,6 +14,7 @@
     border: 1px Black solid;
   border-radius: 6px;
   display: block;
+  background: #FFFFFF
 }
 html, body {
   background: rgb(53, 53, 53);
